2008-04-17  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* startTomcat.sh: 
	Made script compatible with non-bash shells.

	* src/de/schlund/pfixcore/editor2/frontend/util/SessionCookieFilter.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* projects/common/conf/pustefix.xml: 
	* projects/core/prjtemplates/project.tmpl: 
	* projects/core/xsl/include_xslt2.xsl: 
	* projects/core/xsl/include.xsl: 
	* projects/sample1/conf/project.xml.in: 
	* projects/samplebank/conf/project.xml.in: 
	* projects/servletconf/projects.xml.in: 
	* projects/simpleform/conf/project.xml.in: 
	* projects/simplelink/conf/project.xml.in: 
	* projects/simplepage/conf/project.xml.in: 
	* projects/testsuite/conf/project.xml.in:  
	* projects/webservice/conf/project.xml.in: 
	* projects/skel/projects/common/conf/pustefix.xml: 
	* projects/skel/projects/servletconf/projects.xml.in: 
	Removed editor servlet from project configurations. The editor's session 
	id is now stored in a cookie and all applications share the same editor
	instance. The editor URL can be configured using a property in pustefix.xml. 

2008-04-10  jtl  <jtl@schlund.de>

	* projects/core/schema/properties200401.xsd: maybe I was able to change the schema according to my latest changes...
	Someone should better check this.

2008-04-09  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixxml/config/impl/PagerequestRule.java (end): makes sure to check the referenced wrappers in actions 
	against the defined wrappers
	
	* src/de/schlund/pfixxml/config/impl/ProcessActionWrapperRule.java: 
	* src/de/schlund/pfixxml/config/impl/ProcessActionRule.java: 
	* src/de/schlund/pfixxml/config/impl/ProcessActionConfigImpl.java: 
	* src/de/schlund/pfixxml/config/ProcessActionConfig.java: new classes. Holds configuration data for a process action
	and the needed rules for the digester.
	
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java: attach the action rules to the digester
	